fix: P4ADEV-3023 fix auth token (#7)